* Update to v0.9.13 * Shrink popup trigger zone so as not to encompass right 1/4 of group's contacts listing (facilitates scrolling) * Don't show contact form by default on contact popup * Add hover zone on bottom of contact popup to trigger display of contact form * Add link to hide/close contact form button when it is expanded * ...(once opened, contact form stays displayed until explicitly hidden or form is submitted) * Hide contact form after newly-contacted submission * Move 'Hide' contact button out from under avatar and to far right of contact's name * Don't show hide contact button by default on contact popup * Hovering over contact name reveals hide button * Expose CPTs (temporarily?) * Add icons for CPT menus * Fix contact popup vertical positioning for contacts with names that wrap * Use WP-bundled jQuery UI and effects scripts * Define min-width for contact popups * Wrap note for latest contact in popup with `<em>` * Drop support for WP 3.1+, 3.2+
git-svn-id: https://plugins.svn.wordpress.org/last-contacted/trunk@485525 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin.css
+++ b/css/admin.css
@@ -20,15 +20,15 @@
 	color:blue;
 }
 .lc_contacts {
-	width:292px;
-	max-width:292px;
+	width:300px;
+	max-width:300px;
 	margin-left:4px;
 	height:300px;
 	max-height:300px;
 	overflow:auto;
 	border:1px solid lightGrey;
 	border-top:0;
-	padding:0 4px 6px;
+	padding:0 0 6px;
 }
 .lc_details {
 	display:none;
@@ -39,6 +39,7 @@
 	-moz-box-shadow: 1px 1px 6px rgba(0,0,0,0.7);
 	-webkit-box-shadow: 2px 2px 8px rgba(0,0,0,0.7);
 	box-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+	min-width:266px;
 }
 .lc_avatar {
 	position:absolute;
@@ -72,7 +73,11 @@
 	margin:0;
 }
 .last_contact {
-	margin-top:3px;
+	margin-top:0;
+	float:none;
+	position:absolute;
+	top:4px;
+	right:-79px;
 }
 .ui-state-default {
 	border:0;
@@ -93,4 +98,7 @@
 }
 .lc_new_contact {
 	padding:0 0 10px;
+}
+.lc_group_contacts_list {
+	margin-right:84px;
 }
